# fnord

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs  schema.rs
src/date/: convert.rs  types.rs
src/holydays/: defaults.rs  mod.rs  registry.rs  types.rs
src/moon/: ascii.rs  calc.rs  info.rs  mod.rs  phase.rs  upcoming.rs
src/subcommands/: cabbage.rs  cal.rs  chaos.rs  date.rs  erisian.rs  holyday.rs  hotdog.rs  koan.rs  law.rs  log.rs  mod.rs  moon.rs  oracle.rs  pentabarf.rs  pineal.rs  pope.rs  redact.rs  util.rs  wake.rs  wordlists.rs  zodiac.rs
src/subcommands/fortune/: corpus.rs  mod.rs
src/subcommands/omens/: fetch.rs  interpretations.rs  mod.rs
src/wake/: font.rs  mod.rs
src/zodiac/: chinese.rs  discordian.rs  mod.rs  vedic.rs  western.rs
tests/: integration.rs
