[package]
name = "fnord"
version = "0.1.0"
edition = "2021"
description = "A Discordian calendar and chaos utility"
license = "WTFPL"
repository = "https://github.com/maravexa/fnord"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5"
owo-colors = "4"
unicode-width = "0.1"
thiserror = "1"
serde_json = "1"
fnv = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sysinfo = "0.30"
atty = "0.2"
similar = "2.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
