[package]
name = "fn0rd"
version = "0.1.1"
edition = "2021"
rust-version = "1.74.0"
authors = ["Your Name <you@example.com>"]
description = "A Discordian calendar and chaos utility. Weighs exactly 5 tons of flax."
license = "WTFPL"
repository = "https://github.com/maravexa/fnord"
homepage = "https://github.com/maravexa/fnord"
documentation = "https://github.com/maravexa/fnord#readme"
readme = "README.md"
keywords = ["discordian", "calendar", "ddate", "chaos", "cli"]
categories = ["command-line-utilities", "date-and-time"]
exclude = [
    ".github/",
    "tests/fixtures/",
]

[[bin]]
name = "fnord"
path = "src/main.rs"

[[bin]]
name = "generate-completions"
path = "src/bin/generate-completions.rs"
required-features = ["generate-assets"]

[lib]
name = "fn0rd_lib"
path = "src/lib.rs"

[features]
default = []
generate-assets = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5"
owo-colors = "4"
unicode-width = "0.1"
thiserror = "1"
serde_json = "1"
fnv = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sysinfo = "0.30"
atty = "0.2"
similar = "2.4"

[build-dependencies]
clap_mangen = "0.2"
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
