[package]
name = "fn0rd"
version = "0.1.2"
edition = "2021"
rust-version = "1.88"
authors = ["Mara Vexa <me@maravexa.com>"]
description = "A Discordian calendar and chaos utility. Contains 5 tons of flax."
license = "WTFPL"
repository = "https://github.com/maravexa/fnord"
homepage = "https://github.com/maravexa/fnord"
documentation = "https://github.com/maravexa/fnord#readme"
readme = "README.md"
keywords = ["discordian", "calendar", "ddate", "chaos", "cli"]
categories = ["command-line-utilities", "date-and-time"]
exclude = [
    ".github/",
    "tests/fixtures/",
]

[[bin]]
name = "fnord"
path = "src/main.rs"

[[bin]]
name = "generate-completions"
path = "src/bin/generate-completions.rs"
required-features = ["generate-assets"]

[lib]
name = "fn0rd_lib"
path = "src/lib.rs"

[features]
default = []
generate-assets = ["dep:clap_complete"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5"
owo-colors = "4"
unicode-width = "0.2"
thiserror = "1"
serde_json = "1"
fnv = "1.0"
ureq = { version = "2", default-features = false, features = ["tls"] }
sysinfo = "0.38"
similar = "2.4"
clap_complete = { version = "4", optional = true }

[build-dependencies]
clap = { version = "4", features = ["string"] }
clap_mangen = "0.2"
clap_complete = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"

[package.metadata.deb]
name = "fnord"
section = "utils"
priority = "optional"
assets = [
    { source = "target/release/fnord", dest = "/usr/bin/fnord", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/fnord/README.md", mode = "644" },
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/fnord", dest = "/usr/bin/fnord", mode = "755", config = false, doc = false },
    { source = "README.md", dest = "/usr/share/doc/fnord/README.md", mode = "644", config = false, doc = true },
]
